[gd_scene load_steps=21 format=2]

[ext_resource path="res://script/Main.gd" type="Script" id=1]
[ext_resource path="res://ressource/white.png" type="Texture" id=2]
[ext_resource path="res://ressource/grey.png" type="Texture" id=3]
[ext_resource path="res://scene/PlayerOne.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/PlayerTwo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://ressource/circle_dot.png" type="Texture" id=7]
[ext_resource path="res://ressource/red.png" type="Texture" id=8]
[ext_resource path="res://ressource/noir.png" type="Texture" id=9]
[ext_resource path="res://ressource/darkgreen_border.png" type="Texture" id=10]
[ext_resource path="res://ressource/redrocketacad.ttf" type="DynamicFontData" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "grey.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.9565, 264 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 512, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 272 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 272 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 272 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 256, 272 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="World"]
modulate = Color( 0, 0, 0, 1 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
collision_friction = 0.5
collision_layer = 2
collision_mask = 16
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65567, 0, 0, 131072, 0, 0, 131103, 0, 0, 196608, 0, 0, 196639, 0, 0, 262144, 0, 0, 262175, 0, 0, 327680, 0, 0, 327711, 0, 0, 393216, 0, 0, 393247, 0, 0, 458752, 0, 0, 458783, 0, 0, 524288, 0, 0, 524319, 0, 0, 589824, 0, 0, 589855, 0, 0, 655360, 0, 0, 655391, 0, 0, 720896, 0, 0, 720927, 0, 0, 786432, 0, 0, 786463, 0, 0, 851968, 0, 0, 851999, 0, 0, 917504, 0, 0, 917535, 0, 0, 983040, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114143, 0, 0 )

[node name="Fond" type="Sprite" parent="World"]
modulate = Color( 0.337255, 0.592157, 0.345098, 1 )
scale = Vector2( 32, 19 )
z_index = -100
texture = ExtResource( 2 )
centered = false

[node name="CollisionDeSecu" type="StaticBody2D" parent="World"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/CollisionDeSecu"]
position = Vector2( 56, 304 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="World/CollisionDeSecu"]
position = Vector2( 88, 304 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="World/CollisionDeSecu"]
position = Vector2( 968, 304 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="World/CollisionDeSecu"]
position = Vector2( 936, 304 )
shape = SubResource( 3 )

[node name="Colihautbas" type="StaticBody2D" parent="World"]
collision_layer = 34
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Colihautbas"]
position = Vector2( 512, 16 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="World/Colihautbas"]
position = Vector2( 512, 592 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="World/Colihautbas"]
position = Vector2( 512, 16 )
scale = Vector2( 32, 1 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="World/Colihautbas"]
position = Vector2( 512, 592 )
scale = Vector2( 32, 1 )
z_index = -7
texture = ExtResource( 9 )

[node name="PlayerOne" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 304 )
z_index = -1

[node name="PlayerOne2" parent="." instance=ExtResource( 5 )]
position = Vector2( 952, 304 )
z_index = -1

[node name="Goal" type="Node2D" parent="."]

[node name="Goal Gauche" type="Area2D" parent="Goal"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionBox" type="CollisionShape2D" parent="Goal/Goal Gauche"]
position = Vector2( 16, 304 )
shape = SubResource( 5 )

[node name="red" type="Sprite" parent="Goal/Goal Gauche"]
position = Vector2( 28, 304 )
scale = Vector2( 0.75, 17 )
z_index = -20
texture = ExtResource( 8 )

[node name="Goal Droite" type="Area2D" parent="Goal"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Goal Droite"]
position = Vector2( 1008, 304 )
shape = SubResource( 6 )

[node name="red" type="Sprite" parent="Goal/Goal Droite"]
position = Vector2( 996, 304 )
scale = Vector2( 0.75, 17 )
z_index = -20
texture = ExtResource( 8 )

[node name="Hud" parent="." instance=ExtResource( 6 )]
margin_top = -6.0
margin_bottom = -6.0

[node name="ZoneMap" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Area2DGauche" type="Area2D" parent="ZoneMap"]
space_override = 3
gravity_vec = Vector2( -1, 0 )
gravity = 10.0
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneMap/Area2DGauche"]
modulate = Color( 0.901961, 0.168627, 0.168627, 0.360784 )
position = Vector2( 256, 304 )
shape = SubResource( 7 )

[node name="Area2DDroite" type="Area2D" parent="ZoneMap"]
space_override = 3
gravity_vec = Vector2( 1, 0 )
gravity = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneMap/Area2DDroite"]
modulate = Color( 0.329412, 0.0196078, 0.0196078, 0.913725 )
position = Vector2( 768, 304 )
shape = SubResource( 8 )

[node name="TimerBut" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TerrainDecor" type="Node2D" parent="."]
z_index = -3

[node name="circle_dot" type="Sprite" parent="TerrainDecor"]
position = Vector2( 512, 304 )
texture = ExtResource( 7 )

[node name="lignehaut" type="Sprite" parent="TerrainDecor"]
position = Vector2( 512, 136.25 )
scale = Vector2( 0.5, 6.51563 )
texture = ExtResource( 2 )

[node name="lignebas" type="Sprite" parent="TerrainDecor"]
position = Vector2( 512, 471 )
scale = Vector2( 0.5, 6.51563 )
texture = ExtResource( 2 )

[node name="darkgreen_border" type="Sprite" parent="TerrainDecor"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 936, 80 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="darkgreen_border2" type="Sprite" parent="TerrainDecor"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 936, 528 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
flip_v = true

[node name="darkgreen_border3" type="Sprite" parent="TerrainDecor"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 88.0001, 528 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
flip_h = true
flip_v = true

[node name="darkgreen_border4" type="Sprite" parent="TerrainDecor"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 88, 80.0001 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
flip_h = true

[node name="Label" type="Label" parent="TerrainDecor"]
margin_left = 803.0
margin_top = 576.0
margin_right = 994.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.596078 )
text = "space = pause"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cest_le_but" from="." to="Hud" method="_on_Main_cest_le_but"]
[connection signal="id_ball_bot" from="." to="PlayerOne2" method="_on_Main_id_ball_bot"]
[connection signal="body_entered" from="Goal/Goal Gauche" to="." method="_on_Goal_Gauche_body_entered"]
[connection signal="body_entered" from="Goal/Goal Droite" to="." method="_on_Goal_Droite_body_entered"]
[connection signal="bot_mode_signal" from="Hud" to="PlayerOne2" method="_on_Hud_bot_mode_signal"]
[connection signal="body_entered" from="ZoneMap/Area2DGauche" to="." method="_on_Area2DGauche_body_entered"]
[connection signal="body_entered" from="ZoneMap/Area2DDroite" to="." method="_on_Area2DDroite_body_entered"]
[connection signal="timeout" from="TimerBut" to="." method="_on_TimerBut_timeout"]
